Fix z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1925,6 +1925,7 @@ th {
   background-color: lightblue;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 th:nth-child(1) {
