--- a/assets/sass/components/_table.scss
+++ b/assets/sass/components/_table.scss
@@ -50,6 +50,7 @@
 		background-color: lightblue;
 		position: sticky;
 		top: 0;
+		z-index: 1;
 	}
 
 	th:nth-child(1) { 
